# rasberrypi-based-LiDAR-CAMERA-rig

./: .gitattributes  .gitignore  LICENSE  README.md
device/src/FAST-Calib-ROS2/: .gitignore  CMakeLists.txt  README.md  package.xml
device/src/FAST-Calib-ROS2/bag_images/: calib_result.txt
device/src/FAST-Calib-ROS2/config/: qr_params.yaml  qr_params_other_board.yaml
device/src/FAST-Calib-ROS2/include/: CustomMsg.h  CustomPoint.h  common_lib.h
device/src/FAST-Calib-ROS2/launch/: calib_launch.py
device/src/FAST-Calib-ROS2/rviz_cfg/: fast_livo2.rviz
device/src/FAST-Calib-ROS2/src/: data_preprocess.hpp  lidar_detect.hpp  main.cpp  qr_detect.hpp
device/src/FAST_LIO_ROS2/: CMakeLists.txt
device/src/FAST_LIO_ROS2/config/: avia.yaml
device/src/bno085/: package.xml  setup.py
device/src/bno085/bno085/: bno085_publisher.py  test_bno085.py
device/src/camera_ros/launch/: camera.launch.py
device/src/code_pkg/: package.xml  setup.cfg  setup.py
device/src/code_pkg/code_pkg/: bgra2bgr.py  camera_calibration_intrinsic.py  generate_depth_image_from_rosbag.py  generate_live_output.py  generate_output_from_rosbag.py  image_rotate.py
device/src/code_pkg/code_pkg/archive/: generate_depth_image_from_rosbag copy.py
device/src/code_pkg/code_pkg/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
device/src/code_pkg/code_pkg/log/: latest_build
device/src/code_pkg/launch/: all_sensors.launch.py
device/src/code_pkg/scripts/: start.sh
device/src/install/: local_setup.sh  setup.sh
device/src/install/camera_ros/share/camera_ros/: package.sh
device/src/livox_ros2_driver/livox_interfaces/: CMakeLists.txt
device/src/livox_ros2_driver/livox_ros2_driver/: CMakeLists.txt
device/src/livox_ros2_driver/livox_sdk_vendor/: CMakeLists.txt
device/src/log/: latest_build
stl/: BatteryMountingBracket.stl  Body+BatteryMountingBracket.stl  Body.stl  Front.stl
tools/: all_sonsors.launch.py  correct_dataset.py  densify_depth.py  fuse_scans.py  generate_Fusion_Output.py  generate_output_from_rosbag.py  show_ply.py
