<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypecheck="true"?>
<package format="3">
  <name>fast_calib</name>
  <version>0.0.0</version>
  <description>FAST-Calib: Automatic target-based extrinsic calibration tool for LiDAR-camera systems</description>
  
  <maintainer email="zhengcr@connect.hku.hk">Chunran Zheng</maintainer>
  <license>GPL-2.0</license>
  <author email="zhengcr@connect.hku.hk">Chunran Zheng</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>image_geometry</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>ament_index_cpp</depend>
  <depend>OpenCV</depend>
  <depend>PCL</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
